[gd_scene load_steps=6 format=3 uid="uid://dwt2awegps8rb"]

[ext_resource type="Script" uid="uid://dm7abjaa5541x" path="res://items/ui/ItemIcon.gd" id="1_7lq8n"]
[ext_resource type="Texture2D" uid="uid://c5lup4vewfq6b" path="res://assets/icons/background.png" id="1_ub0mh"]
[ext_resource type="Texture2D" uid="uid://c0pmwk5pxf787" path="res://assets/icons/border.png" id="2_7lq8n"]
[ext_resource type="Texture2D" uid="uid://dgurk74pav4dr" path="res://assets/icons/slots/weapon_slot.png" id="3_5kxxi"]
[ext_resource type="Texture2D" uid="uid://c4fdfngkvwsdv" path="res://assets/icons/items/scimitar.png" id="4_o0ggu"]

[node name="ItemIcon" type="CenterContainer"]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_7lq8n")

[node name="BackgroundTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("1_ub0mh")

[node name="BorderTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("2_7lq8n")

[node name="SlotTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("3_5kxxi")

[node name="IconTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("4_o0ggu")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
